  * Properly handle Forwarded: at submit@ time (closes: #568020). Thanks
    to Martin Krafft.
  * Fix source package src: urls (closes: #567439). Thanks to Paul Wise.
  * Use package_maintainer to search for packages maintained by a
    maintainer (closes: #556863). Thanks to Yves-Alexis Perez.
  * Linkify CVE reports (closes: #568464). Thanks to Martin Zobel-Helas.
  * Fix noaffects option

 -- Don Armstrong <don@debian.org>  Wed, 26 Aug 2009 21:32:53 -0700

debbugs (2.4.2~exp0) experimental; urgency=low

  [ Anthony Towns ]
  * Add "package" command to service (control@) to limit the bugs that
    the following commands apply to.

  [ Colin Watson ]
  * Add (slightly) fancy CGI decoding of message/* MIME types.
  * CGI scripts now support multiple maintainers for a single package.
  * Add support for an X-Debbugs-No-Ack: mail header to suppress
    acknowledgements.
  * Document how to deliver mail to debbugs via procmail and SpamAssassin.
  * Implement new .status format that's extensible and easier to read; it
    now lives in .summary rather than .status. Use debbugs-upgradestatus
    to convert existing bug databases.
  * Implement bug ownership, with new 'owner' and 'noowner' commands and
    Owner: pseudo-header (closes: #133453).
  * Install Debian configuration in the binary package's examples
    directory (closes: #222118).
  * New standalone SpamAssassin queue runner, spamscan.
  * Allow # prefix on bug numbers in 'merge' command.
  * Fix some ordering issues in old-style package pages and summaries.
  * Add X-$gProject-PR-Message: headers to all mails sent by service.
  * debbugsconfig creates required directories in $gSpoolDir
    (closes: #222077).
  * Decode RFC1522 mail headers for display in the web interface.
    bugreport.cgi and pkgreport.cgi now output UTF-8.
  * Properly support multiple submitter addresses on a single bug.
  * Add a number of extra htmlsanit() calls to prevent cross-site
    scripting attacks.

  [ Adam Heath ]