@@ -23,6 +23,8 @@ debbugs (2.4.2~exp1) experimental; urgency=low
     maintainer (closes: #556863). Thanks to Yves-Alexis Perez.
   * Linkify CVE reports (closes: #568464). Thanks to Martin Zobel-Helas.
   * Fix noaffects option
+  * Allow the default sendmail options to be specified in the config file;
+    don't use -obq by default anymore.
 
  -- Don Armstrong <don@debian.org>  Wed, 26 Aug 2009 21:32:53 -0700
 
